Revision history for Perl extension threads.

-
	-

2.16 Sun May  7 22:32:59 2017
	- Fix Clang macro backward compatibility per patch by Andy Grundman
	- Sync from blead

2.15 Sun Feb 26 22:45:33 2017
	- Sync from blead

2.14 Sun Feb 26 21:14:26 2017
	- Sync from blead

2.13 Sun Feb 26 17:59:01 2017
	- Added t/kill3.t to test that dir handles are thread-safe

2.12 Sat Dec 31 17:50:58 2016
	- Fix Clang macro

2.09 Fri May 20 18:58:20 2016
	- Document that detached threads suppress the global destruction phase

2.08 Mon May 16 17:40:57 2016
	- Make t/test.pl compatible with Perls < 5.10 (again)

2.07 Sat Apr 30 21:31:39 2016
	- Sync from blead

2.02 Thu Jun 11 03:02:21 2015
	- Make t/test.pl compatible with Perls < 5.10

2.01 Sun Mar  8 02:32:03 2015
	- Make t/test.pl compatible with Perls < 5.14

1.99 Fri Mar  6 14:21:52 2015
	- Fix for missing PERL_UNUSED_RESULT (for real)

1.98 Thu Mar  5 05:27:34 2015
	- Fix for missing PERL_UNUSED_RESULT

1.97 Tue Mar  3 23:30:07 2015
	- Sync from blead

1.96 Wed Aug 27 22:05:34 2014
	- Sync from blead

1.92 Tue Feb  4 23:35:31 2014
	- Version bump for blead

1.91 Tue Feb  4 21:37:39 2014
	- Sync from blead

1.89 Mon Sep 30 14:49:47 2013
	- POD updates for alarm() sample code and the specifics of _handle()

1.87 Tue May 28 15:11:30 2013
	- Ignore signals to finished threads (threads bug #85140)

1.86 Wed Dec 14 21:12:51 2011
	- Fix for mingw-w64 build due to setjmp difference

1.85 Sat Sep  3 15:02:29 2011
	- Version bump for blead

1.84 Sat Sep  3 02:54:19 2011
	- Sync from blead
	- Document signal catching by thread 0

1.83 Sun Apr 17 23:37:01 2011
	- Sync from blead

1.82 Fri Dec 24 16:21:56 2010
	- Document issue with open dir handles
	- Sync from blead
	- POD update

1.81 Mon Sep 27 17:36:31 2010
	- Make compatible with Perl 5.13.2 and higher

1.79 Fri Sep 24 18:40:59 2010
	- Fix failing tests in t/kill2.t

1.78 Wed Sep 22 17:21:22 2010
	- Handle missing signal handler in thread (threads bug #60460)
