@@ -1,4 +1,4 @@
-threads version 2.16
+threads version 2.21
 ====================
 
 This module exposes interpreter threads to the Perl level.
