@@ -1,7 +1,9 @@
 Revision history for Perl extension threads.
 
 -
-	-
+	- Fix to CLANG macros
+	- Can return subs from threads.  See docs.
+	- Sync from blead
 
 2.16 Sun May  7 22:32:59 2017
 	- Fix Clang macro backward compatibility per patch by Andy Grundman
